tests/compile_errors/type/011_fn_decl_reassign.xr
fn locked(x: int): int {
    return x
}

fn replacement(x: int): int {
    return x + 1
}

locked = replacement
